[gd_scene load_steps=9 format=3 uid="uid://cd0b22t6ej1g4"]

[ext_resource type="Script" uid="uid://dw3nfkws3fhmn" path="res://Scripts/healFrogBehaviour.gd" id="1_dduta"]
[ext_resource type="Texture2D" uid="uid://bwfwr1xenfsdj" path="res://shadow-1.png.png" id="2_3j8g0"]
[ext_resource type="Texture2D" uid="uid://bup776lkmdo4j" path="res://Sprites/heal frog (1).png" id="3_dduta"]
[ext_resource type="Texture2D" uid="uid://bx3ogioqm5h2b" path="res://Sprites/water splash.png" id="4_3j8g0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3muq"]
size = Vector2(40.000008, 37.999954)

[sub_resource type="Animation" id="Animation_anyvr"]
resource_name = "splash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("waterSplash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.20000002, 0.26666668, 0.33333334, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_hdff1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("waterSplash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbuj8"]
_data = {
&"RESET": SubResource("Animation_hdff1"),
&"splash": SubResource("Animation_anyvr")
}

[node name="healFrog" type="Node2D"]

[node name="frogArea2D" type="Area2D" parent="."]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_dduta")

[node name="HealFrog" type="Node2D" parent="frogArea2D"]
scale = Vector2(0.99999994, 0.99999994)

[node name="Shadow1_png" type="Sprite2D" parent="frogArea2D"]
visible = false
modulate = Color(0, 0, 0, 0.45882353)
position = Vector2(2.5, 34.999992)
scale = Vector2(0.28125, 0.26562497)
texture = ExtResource("2_3j8g0")

[node name="Sprite2D" type="Sprite2D" parent="frogArea2D"]
visible = false
position = Vector2(2.5, 0)
scale = Vector2(0.1, 0.107)
texture = ExtResource("3_dduta")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="frogArea2D"]
position = Vector2(4.9999995, 47.499992)
scale = Vector2(0.9999997, 0.9999997)
shape = SubResource("RectangleShape2D_c3muq")

[node name="jumpTimer" type="Timer" parent="frogArea2D"]
one_shot = true

[node name="jumpCooldown" type="Timer" parent="frogArea2D"]
wait_time = 1.5

[node name="start" type="Timer" parent="frogArea2D"]
one_shot = true
autostart = true

[node name="waterSplash" type="Sprite2D" parent="frogArea2D"]
modulate = Color(0.60784316, 0.76862746, 0.89411765, 0.68235296)
position = Vector2(2.4999995, 60.000008)
scale = Vector2(3, 1.632)
texture = ExtResource("4_3j8g0")
hframes = 3
vframes = 3
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="frogArea2D"]
libraries = {
&"": SubResource("AnimationLibrary_kbuj8")
}

[connection signal="area_entered" from="frogArea2D" to="frogArea2D" method="_on_area_entered"]
[connection signal="timeout" from="frogArea2D/jumpTimer" to="frogArea2D" method="_on_jump_timer_timeout"]
[connection signal="timeout" from="frogArea2D/jumpCooldown" to="frogArea2D" method="_on_jump_cooldown_timeout"]
[connection signal="timeout" from="frogArea2D/start" to="frogArea2D" method="_on_start_timeout"]
